# github-sentinel

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: reports.py  subscriptions.py
app/core/: config.py
app/db/: session.py
app/integrations/github/: client.py  fetcher.py
app/jobs/: github_jobs.py  scheduler.py
app/llm/: base.py  mock_provider.py
app/models/: github_update.py  report.py  subscription.py
app/notifications/: base.py  manager.py  webhook.py
app/reports/: markdown_generator.py
app/schemas/: subscription.py
app/services/: github_sync_service.py  report_service.py  sentinel_service.py  subscription_service.py
