[project]
name = "github-sentinel"
version = "0.1.0"
description = "AI Agent for tracking GitHub repository updates"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "apscheduler",
    "python-dotenv",
]

[tool.uvicorn]
factory = false
